# yandex-liceum-parser

./: .gitignore  README.md  README.rst  cookies.pikle  pyproject.toml
src/: config.py  eula.py  main.py
src/parser_module/: __init__.py  config.py  download_module.py  get_cookies.py  main_parser.py
