[tool.poetry]
name = "src"
version = "0.0.0"
description = "Parsing utility of the user's answers with Yandex.Liceum"
authors = ["GigantPro <pochtagigantpro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.12.0"
webdriver-manager = "^4.0.0"
aiofiles = "^23.2.1"
aiohttp = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run = "src.main:main"
